// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Loader Loader Center 1`] = `
<div>
  <div>
    <div>
      <div
        class="Viewweb__View-sc-1o0hmxm-0 eayzPs Spaceweb__Space-sc-1abqisc-0 iUFAlD Flexweb__Flex-sc-1yhcoea-0 hPckKI"
      >
        <div
          class="Viewweb__View-sc-1o0hmxm-0 Loader__StyledLoader-js6czr-0 bUSzcZ Sizeweb__Size-sc-1e5yf1-0 fkEnIw"
          role="loader"
        />
      </div>
    </div>
    <div
      id="layerHost"
    />
  </div>
  <div
    id="layerHost"
  />
</div>
`;

exports[`Storyshots Loader Loader Default 1`] = `
<div>
  <div>
    <div>
      <div
        class="Viewweb__View-sc-1o0hmxm-0 Loader__StyledLoader-js6czr-0 bUSzcZ Sizeweb__Size-sc-1e5yf1-0 fkEnIw"
        role="loader"
      />
    </div>
    <div
      id="layerHost"
    />
  </div>
  <div
    id="layerHost"
  />
</div>
`;

exports[`Storyshots Loader Loader Full Page 1`] = `
<div>
  <div>
    <div>
      <div
        class="Viewweb__View-sc-1o0hmxm-0 Loader__FullPageView-js6czr-1 hfDGgf Flexweb__Flex-sc-1yhcoea-0 jXNfqs"
      >
        <div
          class="Viewweb__View-sc-1o0hmxm-0 Loader__StyledLoader-js6czr-0 bUSzcZ Sizeweb__Size-sc-1e5yf1-0 fkEnIw"
          role="loader"
        />
      </div>
    </div>
    <div
      id="layerHost"
    />
  </div>
  <div
    id="layerHost"
  />
</div>
`;
